--- a/HTML and CSS in depth/Week3/styles.css
+++ b/HTML and CSS in depth/Week3/styles.css
@@ -21,7 +21,7 @@
     rgb(36, 59, 85) 91.1%
   );
   --card-width: 18rem;
-  --card-min-width: 20rem;
+  --card-min-width: 22rem;
   --card-min-height: 18rem;
   --border-radius: 0rem;
 }
@@ -49,7 +49,7 @@ header > img {
 
 ul li {
   list-style: none;
-  padding: 1rem;
+  padding: 1rem 0rem;
 }
 
 nav {
@@ -67,6 +67,13 @@ li a {
   color: white;
   text-decoration: none;
   font-size: 1.2rem;
+  padding: 1rem 1rem;
+}
+
+li a:hover{
+  color: rgb(53, 50, 50);
+  background-color: white;
+  font-weight: 700;
 }
 
 main {
@@ -109,9 +116,14 @@ main {
   height: 14rem;
 }
 
+.cards ul{
+  text-align: right;
+  line-height: 0;
+}
+
 .banner {
   min-height: 18rem;
-  background-image: url(./img/banner2.jpg);
+  background-image: url(./img/banner.jpg);
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -122,6 +134,9 @@ main {
   min-height: inherit;
   color: white;
   padding: 2rem 15rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 }
 
 .banner h1 {
@@ -183,6 +198,8 @@ footer div:nth-child(2){
     border-top: 1px solid white;
 }
 
+
+
 @media screen and (max-width: 1200px) {
     .banner > article{
         padding: 2rem 2rem;
@@ -190,6 +207,18 @@ footer div:nth-child(2){
 
     footer{
         margin: 3rem 2rem;
+    }
+
+    .banner h1{
+      font-size: 2rem;
+    }
+
+    .banner p{
+      font-size: 1rem;
+    }
+
+    .cards article{
+      min-width: 20rem;
     }
 
 }
